# claude-code-gen-shorts

./: .env.example  .gitignore  CLAUDE.md  PIPELINE.md  README.md  SPEC.md  docker-compose.yml  elon_musk_webtoon_biography.json  pyproject.toml
docs/: index.html
prompts/: author_bubbles.md  critic_panel.md  decompose_scenes.md  extract_characters.md  review_scenario.md  series_episodes.md  series_foreshadowing.md  series_research.md
scripts/: bootstrap_shorts_project.py  build_all_en_shorts.sh  setup_redash.py
src/: aivis.py  arabize_bubbles.py  audio_mixer.py  bubble_renderer.py  build_chapter.py  build_series.py  character_designer.py  codex_review.py  compose_webtoon.py  composer.py  config.py  critic.py  daily_upload.py  db.py  db_import.py  db_mark_duplicates.py  elevenlabs.py  elevenlabs_sfx.py  encode_targets.py  image_generator.py  init_biography.py  kokoro_tts.py  lexicon.py  llm.py  longform_gen.py  migrate.py  narrate.py  narrator_helpers.py  novel_loader.py  openai_image.py  pipeline.py  plan_series.py  project.py  prompt_composer.py  qwen_tts.py  render_panels.py  scroll_video.py  short_gen.py  short_migrate_output_dirs.py  short_migrate_v2.py  (+25 more)
tools/: adb_short_upload.sh  aivis_userdict.py  bbg_check.py  flux2_batchgen.py  heygen_lipsync.py  news_explore.py  news_fetch.py  news_image_ref.py  news_login_test.py  reconcile_browser_uploads.py  register_adb_uploads.py  sync_anchor_opener.py  sync_lipsync.py  upload_paced.py  verify_tts.py  x_scrape.py  x_trending.py  yt_list_channel.py  yt_oauth_setup.py  yt_pw_channels.py  yt_pw_check.py  yt_pw_delete.py  (+3 more)
(+449 files in other folders)
