[project]
name = "webtoon-gen"
version = "0.1.0"
description = "Novel to webtoon pipeline using Claude Code + Gemini image"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "pillow>=10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "openai>=1.50",
    "pykakasi>=2.2",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "psycopg[binary]>=3.2",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
